# qemu

./: configure  csky-trace.c  meson.build  qemu-options.hx  tracestub.c
configs/targets/: cskyv1eb-linux-user.mak  cskyv1eb-softmmu.mak  cskyv2-linux-user.mak  cskyv2-softmmu.mak  cskyv2eb-linux-user.mak  cskyv2eb-softmmu.mak  riscv32-linux-user.mak  riscv32-softmmu.mak  riscv64-linux-user.mak  riscv64-softmmu.mak
cskysim/: Makefile  cskysim.c
disas/: csky.c  meson.build  riscv.c
gdbstub/: gdbstub.c  softmmu.c
hw/: Kconfig  meson.build
hw/audio/: Kconfig  csky_iis.c  meson.build
hw/block/: csky_nfc.c  meson.build
hw/char/: Kconfig  csky_uart.c  csky_uart_dummy.c  meson.build
hw/core/: cpu-common.c
hw/csky/: csky_boot.c  deimos.c  dummyh.c  dynsoc.c  eragon.c  hobbit1_v2.c  meson.build  smart_card.c  smarth.c  smartl.c  trilobite.c  trilobite_v2.c  virt.c  yunvoice_v2.c
hw/display/: Kconfig  csky_lcd_template.h  csky_lcdc.c  meson.build
hw/dma/: csky_dma.c  meson.build
hw/intc/: Kconfig  csky_intc.c  csky_mic.c  csky_tcip_v1.c  meson.build  riscv_aclint.c  riscv_clic.c  sifive_clint.c  sifive_plic.c  thead_clint.c
hw/misc/: Kconfig  csky_exit.c  csky_fft.c  csky_mca.c  csky_memlog.c  meson.build  thead_asp_nne_v1.c  xiaohui_ahb_cpr.c
hw/net/: Kconfig  csky_mac.c  csky_mac_v2.c  meson.build
hw/riscv/: Kconfig  dummyh.c  dynsoc.c  meson.build  riscv_hart.c  smarth.c  smartl.c  thead_asp_v1.c  thead_pmu.c  virt.c  xiaohui.c
include/: elf.h
linux-user/: elfload.c  main.c  syscall.c  syscall_defs.h
softmmu/: qdev-monitor.c  vl.c
(+880 files in other folders)
